fixtures/vyper/simple/overflow/positive/i16.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "32767"
#!           ],
#!           "caller": "0x8ABEa726e57195381F15F09D50836b5Cd93c097a"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int16) -> int16:
    return witness + 1
