fixtures/vyper/simple/overflow/negative/i16.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-32768"
#!           ],
#!           "caller": "0x74eBade22b37D706aDc4E7efaEC24e7cc7Eb1469"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int16) -> int16:
    return witness - 1
